--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,7 +24,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   device_info: ^0.4.0+1
-  cloud_firestore: ^0.8.1
+  cloud_firestore: ^0.10.1
+  cached_network_image: ^0.8.0
 
 dev_dependencies:
   flutter_test:
